tests/neg/i7529.scala
extension fooOps on [A](a: A):

  @nonsense    // error: not found: nonsense
  def foo = ???